--- a/ocr_project_pr1/ocr_app_pr1/templates/index.html
+++ b/ocr_project_pr1/ocr_app_pr1/templates/index.html
@@ -1,101 +1,100 @@
+
 {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Image Upload and Scan</title>
-        <link rel="stylesheet" href="{% static 'styles.css' %}">
-    
-        <link rel="icon" type="image/jpg" href="{% static 'sunscreeningredients3-2_grande.webp' %}">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <style>
-            body, html {
-                height: 100%;
-                width:100%;
-                margin: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-family: Arial, sans-serif;
-                background-image: url("{% static '403999-111122-ent-breakingbad-hmed.webp' %}");
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-            .container {
-                text-align: center;
-                width: 100%;
-                max-width: 500px;
-                background-color: rgba(255, 255, 255, 0.4);
-                padding: 20px;
-                border-radius: 10px;
-            }
-            form {
-                margin: 20px 0;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NutriScan : Upload and Scan</title>
+    {% comment %} <link rel="stylesheet" href="{% static 'css/dark-mode.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}"> {% endcomment %}
+    <link rel="icon" type="image/jpg" href="{% static 'sunscreeningredients3-2_grande.webp' %}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        body, html {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            background-image: url("{% static '403999-111122-ent-breakingbad-hmed.webp' %}");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .container {
+            text-align: center;
+            width: 80%;
+            max-width: 100px;
+            background-color: rgba(255, 255, 255, 0.6);
+            padding: 12px;
+            border-radius: 11px;
+        } 
+       
+        form {
+            margin: 10px 20px;
+        }
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #EB5A39;
+            color: white;
+            border: none;
+            border-radius: 8px; 
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        input[type="file"] {
+            display: none;
+        }
+        .custom-file-upload {
+            display: block;
+            padding: 09px;
+            background-color: #EB5A39;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        
+        .custom-file-upload:hover,
+        button:hover {
+            background-color: #45a049;
+            transform: scale(1.04);
+        }
+        .clickable-image {
+            width: 80px;
+            height: 80px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .clickable-image:hover {
+            transform: scale(1.1);
+        }
 
-            button {
-                margin-top: 20px;
-                padding: 10px 20px;  /* Increased padding for a larger button */
-                background-color: #EB5A39;  /* Green background */
-                color: white;  /* White text */
-                border: none;  /* Removes border */
-                border-radius: 5px;  /* Rounded corners */
-                cursor: pointer;  /* Pointer cursor on hover */
-                font-size: 16px;  /* Larger font size */
-                transition: background-color 0.3s ease, transform 0.3s ease;  /* Smooth transition for hover effects */
-            }
-/* Hide the actual file input */
-            input[type="file"] {
-                display: none;
-            }
+        .ooga_booga{
+            border-radius: 8px;
+            margin-top: 15px;
 
-/* Style the custom file input button */
-            .custom-file-upload {
-                display: inline-block;
-                padding: 10px 200px;  /* Adjust padding for button size */
-                background-color: #EB5A39;  /* Green background */
-                color: white;  /* White text */
-                border: none;  /* No border */
-                border-radius: 5px;  /* Rounded corners */
-                cursor: pointer;  /* Pointer cursor on hover */
-                font-size: 16px;  /* Larger font size */
-                transition: background-color 0.3s ease, transform 0.3s ease;  /* Smooth transition */
-            }
+        }
+        .ooga_booga:hover,
+        button:hover{
+            background-color: #45a049;
+            transform: scale(1.06);
+        }
 
-/* Hover effect for custom file input button */
-            .custom-file-upload:hover {
-                background-color: #45a049;  /* Darker green on hover */
-                transform: scale(1.05);  /* Slightly enlarges button on hover */
-            }
-            button:hover {
-                background-color: #45a049;  /* Darker green on hover */
-                transform: scale(1.05);  /* Slightly enlarges button on hover */
-            }
-
-
-            {% comment %} .extra-images {
-                display: flex;
-                justify-content: center;
-                margin-top: 20px;
-    
-            } {% endcomment %}
-            .clickable-image {
-                width: 80px;
-                height: 80px;
-                cursor: pointer;
-                transition: transform 0.3s ease;
-            }
-            .clickable-image:hover {
-                transform: scale(1.1);
-            }
-
-            
-        </style>
-    </head>
+    </style>
+</head>
 <body>
+
+{% include 'navbar.html' %}
+    
     <div class="container">
         <h1>NutriScan</h1>
         <form id="upload-form" method="POST" enctype="multipart/form-data">
@@ -104,18 +103,19 @@
                 Choose File
             </label>
             <input id="file-upload" type="file" name="file" required>
-            <button type="submit">Upload and Scan</button>
+            <button type="submit" class = "ooga_booga">Upload and Scan</button>
         </form>
         
-        
-        <h3>Your product have these Harmful Ingredients:</h3>
+        <h3>Your product has these Harmful Ingredients:</h3>
         <ul id="output"></ul>
 
-        {% comment %} <!-- Additional Images lagana hai -->
+{% comment %} 
         <div class="extra-images">
             <img src="{% static 'sunscreeningredients3-2_grande.webp' %}" alt="Extra Image 1" class="clickable-image">
-        </div>
-    </div> {% endcomment %}
+            <img src="{% static 'sunscreeningredients3-2_grande.webp' %}" alt="Extra Image 2" class="clickable-image">
+        </div> {% endcomment %}
+
+    </div>
 
     <script>
         $(document).ready(function(){
@@ -134,13 +134,13 @@
                     processData: false,
                     contentType: false,
                     success: function(data){
-                        $('#output').empty();  // Clear previous results
+                        $('#output').empty();
                         if(data.matched_ingredients.length > 0){
                             $.each(data.matched_ingredients, function(index, ingredient){
                                 $('#output').append('<li><strong>' + ingredient.name + ':</strong> ' + ingredient.description + '</li>');
                             });
                         } else {
-                            $('#output').append('<li>Nothing Harmful Detected Maje karo.</li>');
+                            $('#output').append('Nothing Harmful Detected, enjoy your product :)');
                         }
                     },
                     error: function(xhr, status, error){
@@ -149,7 +149,6 @@
                 });
             });
 
-            // Code to handle image clicks
             $('.clickable-image').on('click', function() {
                 $(this).fadeOut();
             });
